something interesting on github?

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 				<p class="city-section">This is your city: <span class="city-val"></span></p>
 				<p class="desc-section">Currently: <span class="desc-val"></span></p>
 				<p class="temp-section">Current temp is: <span class="temp-val"></span></p>
+				<img src="">
 				<p class="wind-section">Wind speed: <span class="wind-val"></span> mi.</p>
 				<p class="humidity-section">Humidity is: <span class="humidity-val"></span></p>
 				<h3 class="bike-msg"></h3>
